# trv_control

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements_test.txt
.devcontainer/: configuration.yaml  devcontainer.json
.haconfig/: configuration.yaml
.haconfig/custom_components/: trv_control
custom_components/trv_control/: __init__.py  climate.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/trv_control/translations/: da.json
scripts/: setup  start  sync  upgrade-dev  upgrade-version
tests/: README.md  __init__.py  conftest.py  const.py  test_climate.py  test_config_flow.py
trv_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
www/: README.md  performance-dashboard.yaml  preview.html  trv-control-card.js
